# mcp_searxng

./: .dockerignore  .env.example  .flake8  .gitignore  ACKNOWLEDGMENTS.md  LICENSE  README.md  USAGE.md  docker-compose-example.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_manual.py
docker/: Dockerfile
src/mcp_searxng/: __init__.py  client.py  config.py  models.py  server.py
tests/: __init__.py  test_client.py  test_config.py  test_models.py  test_server.py
